--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "cSpell.words": ["iconify", "raha", "Todoitem", "utilis", "xlink"]
+  "cSpell.words": [
+    "iconify",
+    "njsproj",
+    "ntvs",
+    "raha",
+    "Todoitem",
+    "tseslint",
+    "utilis",
+    "xlink"
+  ]
 }
