--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,10 +16,12 @@
     "@mantine/hooks": "^7.15.3",
     "@mui/material": "^6.3.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@types/mathjax": "^0.0.40",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.471.0",
+    "mathjax": "^3.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
