--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,6 +24,7 @@
     "mathjax": "^3.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-router-dom": "^7.1.1",
     "recoil": "^0.7.7",
     "tailwind-merge": "^2.6.0",
