--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "daisyui": "^5.0.0",
     "lucide-react": "^0.471.0",
     "mathjax": "^3.2.2",
     "react": "^18.3.1",
