Changes of gemini sdk to newer version

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,12 @@
     "Brower",
     "butn",
     "dotenv",
+    "genai",
     "generativeai",
     "iconify",
     "njsproj",
     "ntvs",
+    "PEMDAS",
     "raha",
     "Todoitem",
     "tseslint",
