--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,31 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-dialog": "^1.1.7",
-    "@radix-ui/react-separator": "^1.1.3",
-    "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-tooltip": "^1.2.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.488.0",
-    "next": "15.3.0",
-    "next-themes": "^0.4.6",
-    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.5"
+    "next": "15.3.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@juxio/cli": "^0.8.20",
-    "@tailwindcss/postcss": "^4.1.3",
-    "@types/node": "^20.17.30",
+    "typescript": "^5",
+    "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
-    "tailwindcss": "^4.1.3",
-    "typescript": "^5"
+    "@eslint/eslintrc": "^3"
   }
 }
